# Lab-Automation-V2

./: .gitignore  README.md  calibrate_zones.ps1  pyproject.toml  run_monitor.ps1  setup_windows.ps1  simulate_reports.ps1  start_lab_automation.ps1  status_lab_automation.ps1  stop_lab_automation.ps1
config/: config.example.yaml  people-training.yaml  zones.json
docs/: Lab-Automation-v2-Operator-Guide.docx  architecture.md  automation-logic-reference.md  automation-priority-safety.md  build_operator_guide.py  camera-stream-troubleshooting.md  current-status.md  dataset-audit-report.md  dataset-coverage-report.md  file-by-file-guide.md  home-assistant-dashboard.md  improvement-roadmap.md  live-auto-validation-report.md  live-model-validation-report.md  live-monitor-validation.md  live-people-count-validation.md  logic-explained.md  model-comparison-report.md  mqtt-topics.md  people-model-evaluation-report.md  people-model-training-report.md  production-readiness-report.md  project-explained-for-beginners.md  room-mapping-report.md  safe-operation.md  startup-and-shutdown.md  tools-and-technology-choices.md  troubleshooting.md  validation-checklist.md  zone-calibration.md
home-assistant/: camera.yaml  dashboard-labos-camera.yaml  mqtt.yaml
node-red/: README.md  flows.json
tests/: test_live_model_validation.py  test_live_monitor_validation.py  test_live_zone_walk_test.py  test_model_comparison.py  test_system.py  test_zone_geometry.py  test_zones.py
tools/: audit_people_dataset.py  audit_v4.py  capture_lab_frame.py  compare_people_models.py  coverage_report.py  (+15 more)
(+16 files in other folders)
