[project]
name = "lab-automation-v2"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
  "opencv-python>=4.9",
  "lap>=0.5.12",
  "paho-mqtt>=2.0",
  "PyYAML>=6.0",
  "ultralytics>=8.2",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
